# cmake_minimum_required(VERSION <specify CMake version here>)
project(Gurux_DLMS_cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(development/include)
include_directories(GuruxDLMSClientExample/include)
include_directories(GuruxDLMSPushExample/include)
include_directories(GuruxDLMSServerExample/include)
include_directories(mbed/GuruxDLMSClientExample)

add_executable(Gurux_DLMS_cpp
        development/include/chipperingenums.h
        development/include/enums.h
        development/include/errorcodes.h
        development/include/GXAdjacentCell.h
        development/include/GXAPDU.h
        development/include/GXApplicationContextName.h
        development/include/GXAttributeCollection.h
        development/include/GXAuthentication.h
        development/include/GXAuthenticationMechanismName.h
        development/include/GXBytebuffer.h
        development/include/GXChargePerUnitScaling.h
        development/include/GXChargeTable.h
        development/include/GXCipher.h
        development/include/GXCommodity.h
        development/include/GXCreditChargeConfiguration.h
        development/include/GXCurrency.h
        development/include/GXDataInfo.h
        development/include/GXDate.h
        development/include/GXDateTime.h
        development/include/GXDLMS.h
        development/include/GXDLMSAccount.h
        development/include/GXDLMSActionItem.h
        development/include/GXDLMSActionSchedule.h
        development/include/GXDLMSActionSet.h
        development/include/GXDLMSActivityCalendar.h
        development/include/GXDLMSAssociationLogicalName.h
        development/include/GXDLMSAssociationShortName.h
        development/include/GXDLMSAttribute.h
        development/include/GXDLMSAutoAnswer.h
        development/include/GXDLMSAutoConnect.h
        development/include/GXDLMSCaptureObject.h
        development/include/GXDLMSCertificateInfo.h
        development/include/GXDLMSCharge.h
        development/include/GXDLMSClient.h
        development/include/GXDLMSClock.h
        development/include/GXDLMSCompactData.h
        development/include/GXDLMSConnectionEventArgs.h
        development/include/GXDLMSContextType.h
        development/include/GXDLMSConverter.h
        development/include/GXDLMSCredit.h
        development/include/GXDLMSData.h
        development/include/GXDLMSDayProfile.h
        development/include/GXDLMSDayProfileAction.h
        development/include/GXDLMSDemandRegister.h
        development/include/GXDLMSDisconnectControl.h
        development/include/GXDLMSEmergencyProfile.h
        development/include/GXDLMSExtendedRegister.h
        development/include/GXDLMSGPRSSetup.h
        development/include/GXDLMSGSMCellInfo.h
        development/include/GXDLMSGSMDiagnostic.h
        development/include/GXDLMSHdlcSetup.h
        development/include/GXDLMSIECOpticalPortSetup.h
        development/include/GXDLMSImageActivateInfo.h
        development/include/GXDLMSImageTransfer.h
        development/include/GXDLMSIp4Setup.h
        development/include/GXDLMSIp4SetupIpOption.h
        development/include/GXDLMSLimiter.h
        development/include/GXDLMSLimits.h
        development/include/GXDLMSLNCommandHandler.h
        development/include/GXDLMSLNParameters.h
        development/include/GXDLMSLongTransaction.h
        development/include/GXDLMSMacAddressSetup.h
        development/include/GXDLMSMBusClient.h
        development/include/GXDLMSMBusMasterPortSetup.h
        development/include/GXDLMSMBusSlavePortSetup.h
        development/include/GXDLMSMd5.h
        development/include/GXDLMSMessageHandler.h
        development/include/GXDLMSModemConfiguration.h
        development/include/GXDLMSModemInitialisation.h
        development/include/GXDLMSMonitoredValue.h
        development/include/GXDLMSNotify.h
        development/include/GXDLMSObject.h
        development/include/GXDLMSObjectCollection.h
        development/include/GXDLMSObjectDefinition.h
        development/include/GXDLMSObjectFactory.h
        development/include/GXDLMSParameterMonitor.h
        development/include/GXDLMSPppSetup.h
        development/include/GXDLMSPppSetupIPCPOption.h
        development/include/GXDLMSPppSetupLcpOption.h
        development/include/GXDLMSProfileGeneric.h
        development/include/GXDLMSPushObject.h
        development/include/GXDLMSPushSetup.h
        development/include/GXDLMSQualityOfService.h
        development/include/GXDLMSRegister.h
        development/include/GXDLMSRegisterActivation.h
        development/include/GXDLMSRegisterMonitor.h
        development/include/GXDLMSSapAssignment.h
        development/include/GXDLMSSchedule.h
        development/include/GXDLMSScheduleEntry.h
        development/include/GXDLMSScript.h
        development/include/GXDLMSScriptAction.h
        development/include/GXDLMSScriptTable.h
        development/include/GXDLMSSeasonProfile.h
        development/include/GXDLMSSecureClient.h
        development/include/GXDLMSSecureServer.h
        development/include/GXDLMSSecuritySetup.h
        development/include/GXDLMSServer.h
        development/include/GXDLMSSettings.h
        development/include/GXDLMSSha1.h
        development/include/GXDLMSSha256.h
        development/include/GXDLMSSNCommandHandler.h
        development/include/GXDLMSSNParameters.h
        development/include/GXDLMSSpecialDay.h
        development/include/GXDLMSSpecialDaysTable.h
        development/include/GXDLMSTarget.h
        development/include/GXDLMSTcpUdpSetup.h
        development/include/GXDLMSTokenGateway.h
        development/include/GXDLMSTranslator.h
        development/include/GXDLMSTranslatorStructure.h
        development/include/GXDLMSUtilityTables.h
        development/include/GXDLMSValueEventArg.h
        development/include/GXDLMSValueEventCollection.h
        development/include/GXDLMSVariant.h
        development/include/GXDLMSWeekProfile.h
        development/include/GXHelpers.h
        development/include/GXReplyData.h
        development/include/GXSecure.h
        development/include/GXSerialNumberCounter.h
        development/include/GXServerReply.h
        development/include/GXSNInfo.h
        development/include/GXStandardObisCode.h
        development/include/GXStandardObisCodeCollection.h
        development/include/GXTime.h
        development/include/GXTokenGatewayConfiguration.h
        development/include/GXUnitCharge.h
        development/include/IGXDLMSBase.h
        development/include/OBiscodes.h
        development/include/TranslatorGeneralTags.h
        development/include/TranslatorSimpleTags.h
        development/include/TranslatorStandardTags.h
        development/include/TranslatorTags.h
        development/src/GXAdjacentCell.cpp
        development/src/GXAPDU.cpp
        development/src/GXApplicationContextName.cpp
        development/src/GXAuthenticationMechanismName.cpp
        development/src/GXBytebuffer.cpp
        development/src/GXChargePerUnitScaling.cpp
        development/src/GXChargeTable.cpp
        development/src/GXCipher.cpp
        development/src/GXCommodity.cpp
        development/src/GXCreditChargeConfiguration.cpp
        development/src/GXCurrency.cpp
        development/src/GXDateTime.cpp
        development/src/GXDLMS.cpp
        development/src/GXDLMSAccount.cpp
        development/src/GXDLMSActionItem.cpp
        development/src/GXDLMSActionSchedule.cpp
        development/src/GXDLMSActionSet.cpp
        development/src/GXDLMSActivityCalendar.cpp
        development/src/GXDLMSAssociationLogicalName.cpp
        development/src/GXDLMSAssociationShortName.cpp
        development/src/GXDLMSAutoAnswer.cpp
        development/src/GXDLMSAutoConnect.cpp
        development/src/GXDLMSCaptureObject.cpp
        development/src/GXDLMSCertificateInfo.cpp
        development/src/GXDLMSCharge.cpp
        development/src/GXDLMSClient.cpp
        development/src/GXDLMSClock.cpp
        development/src/GXDLMSCompactData.cpp
        development/src/GXDLMSContextType.cpp
        development/src/GXDLMSConverter.cpp
        development/src/GXDLMSCredit.cpp
        development/src/GXDLMSData.cpp
        development/src/GXDLMSDayProfile.cpp
        development/src/GXDLMSDayProfileAction.cpp
        development/src/GXDLMSDemandRegister.cpp
        development/src/GXDLMSDisconnectControl.cpp
        development/src/GXDLMSEmergencyProfile.cpp
        development/src/GXDLMSExtendedRegister.cpp
        development/src/GXDLMSGPRSSetup.cpp
        development/src/GXDLMSGSMCellInfo.cpp
        development/src/GXDLMSGSMDiagnostic.cpp
        development/src/GXDLMSHdlcSetup.cpp
        development/src/GXDLMSIECOpticalPortSetup.cpp
        development/src/GXDLMSImageActivateInfo.cpp
        development/src/GXDLMSImageTransfer.cpp
        development/src/GXDLMSIp4Setup.cpp
        development/src/GXDLMSIp4SetupIpOption.cpp
        development/src/GXDLMSLimiter.cpp
        development/src/GXDLMSLimits.cpp
        development/src/GXDLMSLNCommandHandler.cpp
        development/src/GXDLMSLNParameters.cpp
        development/src/GXDLMSMacAddressSetup.cpp
        development/src/GXDLMSMBusClient.cpp
        development/src/GXDLMSMBusMasterPortSetup.cpp
        development/src/GXDLMSMBusSlavePortSetup.cpp
        development/src/GXDLMSMd5.cpp
        development/src/GXDLMSMessageHandler.cpp
        development/src/GXDLMSModemConfiguration.cpp
        development/src/GXDLMSModemInitialisation.cpp
        development/src/GXDLMSMonitoredValue.cpp
        development/src/GXDLMSNotify.cpp
        development/src/GXDLMSObject.cpp
        development/src/GXDLMSObjectCollection.cpp
        development/src/GXDLMSObjectDefinition.cpp
        development/src/GXDLMSObjectFactory.cpp
        development/src/GXDLMSParameterMonitor.cpp
        development/src/GXDLMSPppSetup.cpp
        development/src/GXDLMSPppSetupIPCPOption.cpp
        development/src/GXDLMSPppSetupLcpOption.cpp
        development/src/GXDLMSProfileGeneric.cpp
        development/src/GXDLMSPushObject.cpp
        development/src/GXDLMSPushSetup.cpp
        development/src/GXDLMSQualityOfService.cpp
        development/src/GXDLMSRegister.cpp
        development/src/GXDLMSRegisterActivation.cpp
        development/src/GXDLMSRegisterMonitor.cpp
        development/src/GXDLMSSapAssignment.cpp
        development/src/GXDLMSSchedule.cpp
        development/src/GXDLMSScheduleEntry.cpp
        development/src/GXDLMSScript.cpp
        development/src/GXDLMSScriptAction.cpp
        development/src/GXDLMSScriptTable.cpp
        development/src/GXDLMSSeasonProfile.cpp
        development/src/GXDLMSSecureClient.cpp
        development/src/GXDLMSSecureServer.cpp
        development/src/GXDLMSSecuritySetup.cpp
        development/src/GXDLMSServer.cpp
        development/src/GXDLMSSettings.cpp
        development/src/GXDLMSSha1.cpp
        development/src/GXDLMSSha256.cpp
        development/src/GXDLMSSNCommandHandler.cpp
        development/src/GXDLMSSNParameters.cpp
        development/src/GXDLMSSpecialDay.cpp
        development/src/GXDLMSSpecialDaysTable.cpp
        development/src/GXDLMSTarget.cpp
        development/src/GXDLMSTcpUdpSetup.cpp
        development/src/GXDLMSTokenGateway.cpp
        development/src/GXDLMSTranslator.cpp
        development/src/GXDLMSTranslatorStructure.cpp
        development/src/GXDLMSUtilityTables.cpp
        development/src/GXDLMSValueEventArg.cpp
        development/src/GXDLMSVariant.cpp
        development/src/GXDLMSWeekProfile.cpp
        development/src/GXHelpers.cpp
        development/src/GXReplyData.cpp
        development/src/GXSecure.cpp
        development/src/GXSerialNumberCounter.cpp
        development/src/GXSNInfo.cpp
        development/src/GXStandardObisCode.cpp
        development/src/GXStandardObisCodeCollection.cpp
        development/src/GXTokenGatewayConfiguration.cpp
        development/src/GXUnitCharge.cpp
        development/VS/GuruxDLMS.sln
        development/VS/GuruxDLMS.vcproj
        development/VS/GuruxDLMS.vcxproj
        development/VS/GuruxDLMS.vcxproj.filters
        development/makefile
        GuruxDLMSClientExample/include/communication.h
        GuruxDLMSClientExample/include/getopt.h
        GuruxDLMSClientExample/src/communication.cpp
        GuruxDLMSClientExample/src/getopt.c
        GuruxDLMSClientExample/src/GuruxDLMSClientExample.cpp
        GuruxDLMSClientExample/VS/GuruxDLMClientExample.sln
        GuruxDLMSClientExample/VS/GuruxDLMSClientExample.vcxproj
        GuruxDLMSClientExample/VS/GuruxDLMSClientExample.vcxproj.filters
        GuruxDLMSClientExample/.gitattributes
        GuruxDLMSClientExample/.gitignore
        GuruxDLMSClientExample/makefile
        GuruxDLMSPushExample/include/GXDLMSPushListener.h
        GuruxDLMSPushExample/src/GXDLMSPushListener.cpp
        GuruxDLMSPushExample/src/main.cpp
        GuruxDLMSPushExample/VS/GuruxDLMSPushExample.sln
        GuruxDLMSPushExample/VS/GuruxDLMSPushExample.vcxproj
        GuruxDLMSPushExample/VS/GuruxDLMSPushExample.vcxproj.filters
        GuruxDLMSPushExample/makefile
        GuruxDLMSServerExample/include/getopt.h
        GuruxDLMSServerExample/include/GXDLMSBase.h
        GuruxDLMSServerExample/include/GXDLMSServerLN.h
        GuruxDLMSServerExample/include/GXDLMSServerLN_47.h
        GuruxDLMSServerExample/include/GXDLMSServerSN.h
        GuruxDLMSServerExample/include/GXDLMSServerSN_47.h
        GuruxDLMSServerExample/src/getopt.c
        GuruxDLMSServerExample/src/GXDLMSBase.cpp
        GuruxDLMSServerExample/src/main.cpp
        GuruxDLMSServerExample/VS/GuruxDLMSServerExample.sln
        GuruxDLMSServerExample/VS/GuruxDLMSServerExample.vcxproj
        GuruxDLMSServerExample/VS/GuruxDLMSServerExample.vcxproj.filters
        GuruxDLMSServerExample/.gitattributes
        GuruxDLMSServerExample/.gitignore
        GuruxDLMSServerExample/makefile
        mbed/GuruxDLMSClientExample/.mbed
        mbed/GuruxDLMSClientExample/communication.cpp
        mbed/GuruxDLMSClientExample/communication.h
        mbed/GuruxDLMSClientExample/main.cpp
        mbed/GuruxDLMSClientExample/mbed-os.lib
        mbed/GuruxDLMSClientExample/mbed_settings.py
        .gitattributes
        .gitignore
        CREDITS.md
        LICENSE
        README.md)
